force-app/main/default/objects/Lilly_Corporate_Activities__c/Lilly_Corporate_Activities__c.object-meta.xml
<CustomObject>
    <label>Corporate Activities</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Corporate Activities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>