force-app/main/default/objects/Lilly_Corporate_Activities__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Activities</relationshipLabel>
    <relationshipName>Corporate_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>