force-app/main/default/objects/Lilly_Corporate_Activities__c/fields/Lilly_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>