force-app/main/default/objects/Lilly_Corporate_Activities__c/fields/Lilly_Experience__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>