force-app/main/default/objects/Lilly_Corporate_Activities__c/fields/Lilly_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>