force-app/main/default/objects/Lilly_Corporate_Activities__c/fields/Lilly_Title__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Title__c</fullName>
    <label>Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>