force-app/main/default/objects/Lilly_Corporate_Activities__c/fields/Lilly_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dinner Meeting</fullName>
            </value>
            <value>
                <fullName>Trial Management</fullName>
            </value>
            <value>
                <fullName>Trial Participation</fullName>
            </value>
            <value>
                <fullName>Publishing Event</fullName>
            </value>
            <value>
                <fullName>Webinar View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>