force-app/main/default/objects/Lilly_Corporate_Activities__c/fields/OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Corporate_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>