force-app/main/default/objects/Lilly_Corporate_Activities__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lilly_Account__c</columns>
    <columns>Lilly_Type__c</columns>
    <columns>Lilly_Start_Date__c</columns>
    <columns>Lilly_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>